tests/requests/valid/018.http
GET /first HTTP/1.1\r\n
\r\n
GET /second HTTP/1.1\r\n
\r\n