tests/requests/invalid/prefix_02.http
GET\0 /foo HTTP/1.1\r\n
\r\n
